--- a/EthereumTrust/EthereumTrust.csproj
+++ b/EthereumTrust/EthereumTrust.csproj
@@ -2,13 +2,13 @@
 
   <PropertyGroup>
     <Copyright>2020 OX</Copyright>
-    <AssemblyTitle>outputrestriction</AssemblyTitle>
+    <AssemblyTitle>EthereumTrust</AssemblyTitle>
     <Version>1.0.2</Version>
     <Authors>OX</Authors>
     <TargetFramework>net6.0</TargetFramework>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <AssemblyName>OutputRestriction</AssemblyName>
-    <PackageId>OX.SmartContract.OutputRestriction</PackageId>
+    <AssemblyName>EthereumTrust</AssemblyName>
+    <PackageId>OX.SmartContract.EthereumTrust</PackageId>
     <PackageTags></PackageTags>
     <PackageProjectUrl></PackageProjectUrl>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
